# core

./: CMakeLists.txt
include/plugin/: Plugin.h
source/: Plugin.cxx
